crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_book_bw_parts.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
expression: rendered
---
[E200] error @ "GrindSetting"
  no definition 'GrindSetting' found in scope of feature typing
  note: ensure the name is defined or imported in scope
  note: resolution performed without standard library
[IM006] error @ "import ScalarValues::*;"
  import references unknown standard library namespace 'ScalarValues'
  note: valid namespaces: ScalarValues, ISQ, SI, Collections, Performances, Parts, Connections, Ports, Interfaces, Items, Actions, States, Constraints, Requirements, Calculations, ...
[IM001] info @ "import BeverageTypes::*;"
  import references namespace 'BeverageTypes' (unresolved in current workspace context)
  note: checked current file and loaded standard library only; open the project/workspace folder so cross-file imports can be indexed
[PH006] info @ "brewPressure"
  did you mean `ISQ::PressureValue`? attribute 'brewPressure' in 'Brewer' is typed as Real
  note: hydraulic effort — enables pressure propagation — using the ISQ type unlocks automatic physics classification
  note: try: `attribute brewPressure : ISQ::PressureValue;`
  note: ISQ types enable domain detection, conservation laws, and simulation
