crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_book_bw_types.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
expression: rendered
---
[IM006] error @ "import ScalarValues::*;"
  import references unknown standard library namespace 'ScalarValues'
  note: valid namespaces: ScalarValues, ISQ, SI, Collections, Performances, Parts, Connections, Ports, Interfaces, Items, Actions, States, Constraints, Requirements, Calculations, ...
