crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_book_cm_calculations.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
assertion_line: 782
expression: rendered
---
[E200] error @ "CoffeeMachine"
  no definition 'CoffeeMachine' found in scope of subclassification
  note: ensure the name is defined or imported in scope
  note: resolution performed without standard library
[E200] error @ "DrinkType"
  no definition 'DrinkType' found in scope of feature typing
  note: ensure the name is defined or imported in scope
  note: resolution performed without standard library
[IM006] error @ "import NumericalFunctions::*;"
  import references unknown standard library namespace 'NumericalFunctions'
  note: valid namespaces: ScalarValues, ISQ, SI, Collections, Performances, Parts, Connections, Ports, Interfaces, Items, Actions, States, Constraints, Requirements, Calculations, ...
[IM006] error @ "import ScalarValues::*;"
  import references unknown standard library namespace 'ScalarValues'
  note: valid namespaces: ScalarValues, ISQ, SI, Collections, Performances, Parts, Connections, Ports, Interfaces, Items, Actions, States, Constraints, Requirements, Calculations, ...
[IM001] info @ "import Definitions::*;"
  import references namespace 'Definitions' (unresolved in current workspace context)
  note: checked current file and loaded standard library only; open the project/workspace folder so cross-file imports can be indexed
