crates/tooling/sysml-lsp-server/src/snapshots/sysml_lsp_server__snapshot_tests__snapshot_diagnostics_book_cm_metadata.snap
---
source: crates/tooling/sysml-lsp-server/src/snapshot_tests.rs
expression: rendered
---
[E200] error @ "CoffeeMachine"
  no definition 'CoffeeMachine' found in scope of subclassification
  note: ensure the name is defined or imported in scope
  note: resolution performed without standard library
[IM001] info @ "import Definitions::*;"
  import references namespace 'Definitions' (unresolved in current workspace context)
  note: checked current file and loaded standard library only; open the project/workspace folder so cross-file imports can be indexed
